--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -204,11 +204,11 @@ section ul {
 }
 
 section ul li {
-    padding: 8px;
-    margin-bottom: 5px;
+    padding: 15px;
+    margin-bottom: 1px;
     background-color: #f1f1f1;
-    border: 1px solid #ccc;
-    font-size: 18px;
+    border: 1px solid #CCC;
+    font-size: 20px;
 }
 
 section ul li:hover {
@@ -336,11 +336,12 @@ body {
 
 footer {
     text-align: center;
-    padding: 0px;
+    padding: 1px;
     background-color: #1B2030;
     color: white;
     width: 100%;
-    position: absolute;
+    position: relative;
+    margin-top: 30px;
 }
 
 .main-gallary {
